--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1UwnnQYGxiMRTy2qsEgzM",
+      "authorship_tag": "ABX9TyNOlX4FWkGstHNjlST1PsCy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 826
+          "height": 825
         },
         "id": "x_zT8hkEYQuy",
         "outputId": "cd65f0cc-e060-4797-c4cf-849f6b0d6661"
@@ -604,7 +604,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 878
+          "height": 877
         },
         "id": "RYNAujnWZxOR",
         "outputId": "9f6ccd80-f7c1-4c76-93c5-91b885793d9a"
@@ -1097,6 +1097,78 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 語法教學\n",
+        "# Everything is an object: 任何東西都具有型態, 每個型態具有其獨特的操作\n",
+        "# 型態: dict 操作: [key]\n",
+        "# 功能也是如此 型態: int  操作: (4.2)\n",
+        "b = int\n",
+        "b(8.6)\n",
+        "def test(mode):\n",
+        "  if mode is True:\n",
+        "    return int\n",
+        "  else:\n",
+        "    return round\n",
+        "test(False)(10000.6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JhjVteHfhTUP",
+        "outputId": "c1f81e30-7e1b-40af-a762-a7939b43c596"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# apply: 轉換\n",
+        "def func(a):\n",
+        "  return (a ** 2) * 10\n",
+        "\n",
+        "s = pd.Series([1, 2, 3, 4])\n",
+        "s.apply(func)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6jaXn_BCkdVR",
+        "outputId": "a6fa06a5-47ff-4303-f4b7-feb7a27d7155"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     10\n",
+              "1     40\n",
+              "2     90\n",
+              "3    160\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
