--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOlX4FWkGstHNjlST1PsCy",
+      "authorship_tag": "ABX9TyNW8GIZw49vK+WR7R9l1cwy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -604,7 +604,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 877
+          "height": 805
         },
         "id": "RYNAujnWZxOR",
         "outputId": "9f6ccd80-f7c1-4c76-93c5-91b885793d9a"
@@ -1171,6 +1171,38 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# \"Braund, Mr. Owen Harris\".split(\".\")[0].split(\",\")[-1].strip()\n",
+        "def func(s):\n",
+        "  return (s.split(\".\")[0]\n",
+        "       .split(\",\")[-1]\n",
+        "       .strip())\n",
+        "datas[\"Name\"] = datas[\"Name\"].apply(func)"
+      ],
+      "metadata": {
+        "id": "9MHp0YKzl-cf"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func(s):\n",
+        "  if pd.isna(s):\n",
+        "    return s\n",
+        "  else:\n",
+        "    return s[0]\n",
+        "datas[\"Cabin\"] = datas[\"Cabin\"].apply(func)"
+      ],
+      "metadata": {
+        "id": "ioB5Fi46nIKn"
+      },
+      "execution_count": 26,
+      "outputs": []
     }
   ]
 }
