--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNW8GIZw49vK+WR7R9l1cwy",
+      "authorship_tag": "ABX9TyPQPAy4OdPy8BTidbuqzw6d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1203,6 +1203,68 @@
       },
       "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts = datas[\"Ticket\"].value_counts()\n",
+        "def func(t):\n",
+        "  if pd.isna(t):\n",
+        "    return t\n",
+        "  else:\n",
+        "    return counts[t]\n",
+        "datas[\"Ticket\"] = datas[\"Ticket\"].apply(func)"
+      ],
+      "metadata": {
+        "id": "gDu2vEOFq1-W"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# datas[\"Name\"].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iQutYteqdjn",
+        "outputId": "c3c07826-7281-442d-8d73-5ad98759a1c4"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Name\n",
+              "Mr              757\n",
+              "Miss            260\n",
+              "Mrs             197\n",
+              "Master           61\n",
+              "Rev               8\n",
+              "Dr                8\n",
+              "Col               4\n",
+              "Mlle              2\n",
+              "Major             2\n",
+              "Ms                2\n",
+              "Lady              1\n",
+              "Sir               1\n",
+              "Mme               1\n",
+              "Don               1\n",
+              "Capt              1\n",
+              "the Countess      1\n",
+              "Jonkheer          1\n",
+              "Dona              1\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
