--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQPAy4OdPy8BTidbuqzw6d",
+      "authorship_tag": "ABX9TyN241g1+zIOf8mEZMqu+CGk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,7 +588,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "資料預處理\n"
+        "欄位分別\n",
+        "1. 類別: 固定幾種的(Pclass, Name, Sex, Cabin, Embarked)\n",
+        "2. 數值: 連續型(Age, SibSp, Parch, Ticket#,Fare)\n",
+        "\n",
+        "資料預處理\n",
+        "1. 填缺失值: 最可能\n",
+        "a. 類別: 最常出現的那種\n",
+        "b. 數值:\n"
       ],
       "metadata": {
         "id": "wgXmRTNBZy8x"
@@ -604,7 +611,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 805
+          "height": 877
         },
         "id": "RYNAujnWZxOR",
         "outputId": "9f6ccd80-f7c1-4c76-93c5-91b885793d9a"
@@ -1224,45 +1231,93 @@
     {
       "cell_type": "code",
       "source": [
-        "# datas[\"Name\"].value_counts()"
+        "s = datas.isna().sum()\n",
+        "# 篩選 Series[跟你Series比數依樣多的True/False]\n",
+        "fil = s > 0\n",
+        "s[fil]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "9iQutYteqdjn",
-        "outputId": "c3c07826-7281-442d-8d73-5ad98759a1c4"
+        "id": "I_daoWxZyABN",
+        "outputId": "bd190554-4fea-426f-d6d4-6e7a47cd375a"
       },
-      "execution_count": 28,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Name\n",
-              "Mr              757\n",
-              "Miss            260\n",
-              "Mrs             197\n",
-              "Master           61\n",
-              "Rev               8\n",
-              "Dr                8\n",
-              "Col               4\n",
-              "Mlle              2\n",
-              "Major             2\n",
-              "Ms                2\n",
-              "Lady              1\n",
-              "Sir               1\n",
-              "Mme               1\n",
-              "Don               1\n",
-              "Capt              1\n",
-              "the Countess      1\n",
-              "Jonkheer          1\n",
-              "Dona              1\n",
-              "Name: count, dtype: int64"
+              "Age          263\n",
+              "Fare           1\n",
+              "Cabin       1014\n",
+              "Embarked       2\n",
+              "dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 類別型: 捕最常出現的\n",
+        "most = datas[\"Embarked\"].value_counts().idxmax()\n",
+        "datas[\"Embarked\"] = datas[\"Embarked\"].fillna(most)"
+      ],
+      "metadata": {
+        "id": "BSyk_UaLzBiv"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 數執行: 中位數\n",
+        "# 過濾出數值欄位\n",
+        "s = datas.dtypes\n",
+        "fil = s != \"object\"\n",
+        "num_index = s[fil].drop(\"Pclass\").index\n",
+        "med = datas[num_index].median()\n",
+        "datas = datas.fillna(med)"
+      ],
+      "metadata": {
+        "id": "XySKJLFSzi0l"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = datas.isna().sum()\n",
+        "# 篩選 Series[跟你Series比數依樣多的True/False]\n",
+        "fil = s > 0\n",
+        "s[fil]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8HsQWJAl1OQ1",
+        "outputId": "5cc58fb2-ee7b-4575-8332-b677115e59fe"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Cabin    1014\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
         }
       ]
     }
