--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFCSc0stEyrRlRauKfhee7",
+      "authorship_tag": "ABX9TyMD8KHLpbMqdOBItdXJkWyt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3519,6 +3519,56 @@
           "execution_count": 34
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Demo: pandas取列\n",
+        "d = pd.DataFrame([\n",
+        "    [\"a\", \"b\"],\n",
+        "    [\"c\", \"d\"],\n",
+        "    [\"e\", \"f\"]\n",
+        "], index=[0, 0, 1])\n",
+        "# loc: 是看列標籤取列 iloc: 是看第幾列取列!!!\n",
+        "d.iloc[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kC4m4ZiuduO3",
+        "outputId": "776c2d4c-67e1-4297-a2ed-314ef1689be4"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    e\n",
+              "1    f\n",
+              "Name: 1, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = datas[:len(train)]\n",
+        "x_predict = datas[len(train):]\n",
+        "x_scaled = datas_scaled[:len(train)]\n",
+        "x_predict_scaled = datas_scaled[len(train):]\n",
+        "y = train[\"Survived\"]"
+      ],
+      "metadata": {
+        "id": "zJ5tH03Nevnv"
+      },
+      "execution_count": 46,
+      "outputs": []
     }
   ]
 }
