--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD8KHLpbMqdOBItdXJkWyt",
+      "authorship_tag": "ABX9TyMbRVBhIJWRCpcLTXdsgJui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3569,6 +3569,65 @@
       },
       "execution_count": 46,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 之前我們是把x->x_train(90)和x_test(10)\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "for n in range(2, 30):\n",
+        "  clf = KNeighborsClassifier(n_neighbors=n)\n",
+        "  scores = cross_val_score(clf, x_scaled, y, cv=10)\n",
+        "  avg = np.average(scores)\n",
+        "  print(n, \":\", avg)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nCDvc-_Afr5O",
+        "outputId": "041641dc-e3e6-479e-b672-5760c0e92964"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 : 0.7901747815230962\n",
+            "3 : 0.8193757802746566\n",
+            "4 : 0.8058801498127341\n",
+            "5 : 0.8170786516853932\n",
+            "6 : 0.8227091136079899\n",
+            "7 : 0.832796504369538\n",
+            "8 : 0.8136828963795256\n",
+            "9 : 0.8125842696629213\n",
+            "10 : 0.8058676654182271\n",
+            "11 : 0.818214731585518\n",
+            "12 : 0.8069787765293384\n",
+            "13 : 0.8137203495630463\n",
+            "14 : 0.8125842696629213\n",
+            "15 : 0.8227215980024967\n",
+            "16 : 0.8137203495630463\n",
+            "17 : 0.8193508114856429\n",
+            "18 : 0.8137203495630461\n",
+            "19 : 0.8137203495630463\n",
+            "20 : 0.8170536828963794\n",
+            "21 : 0.8136953807740325\n",
+            "22 : 0.8148064918851435\n",
+            "23 : 0.8148064918851435\n",
+            "24 : 0.8147940074906368\n",
+            "25 : 0.8136828963795256\n",
+            "26 : 0.8091885143570536\n",
+            "27 : 0.8058676654182273\n",
+            "28 : 0.8069538077403247\n",
+            "29 : 0.8058426966292135\n"
+          ]
+        }
+      ]
     }
   ]
 }
