--- a/4_titanic.ipynb
+++ b/4_titanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbRVBhIJWRCpcLTXdsgJui",
+      "authorship_tag": "ABX9TyN27DGx6TSRZ6cuhY/3vOEb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3588,6 +3588,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "nCDvc-_Afr5O",
         "outputId": "041641dc-e3e6-479e-b672-5760c0e92964"
       },
@@ -3628,6 +3629,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test這名字我上面再demo的時候不小心蓋掉了\n",
+        "test = pd.read_csv(\"test.csv\", encoding=\"utf-8\")\n",
+        "\n",
+        "clf = KNeighborsClassifier(n_neighbors=11)\n",
+        "clf.fit(x_scaled, y)\n",
+        "pre = clf.predict(x_predict_scaled)\n",
+        "result = pd.DataFrame({\n",
+        "    \"PassengerId\":test[\"PassengerId\"],\n",
+        "    \"Survived\":pre\n",
+        "})\n",
+        "result.to_csv(\"titanic_knn.csv\", encoding=\"utf-8\", index=False)"
+      ],
+      "metadata": {
+        "id": "pSZ83NpRjaz6"
+      },
+      "execution_count": 58,
+      "outputs": []
     }
   ]
 }
