--- a/5_mnist.ipynb
+++ b/5_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3fJ5Hx+DRLT7M9rmxXuip",
+      "authorship_tag": "ABX9TyMXqHQuWsAGqVwr4AH2G+NB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 68
         },
         "id": "gijMgaL4ht8b",
         "outputId": "a6e99515-c5ca-4dbb-fdf7-92a76f79f0b7"
@@ -283,8 +283,9 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 947
+          "height": 0
         },
+        "collapsed": true,
         "id": "5cQ9bKA_iAc-",
         "outputId": "b6ddd23d-1f99-4df7-97c0-9cea67f023b1"
       },
@@ -1465,6 +1466,51 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# model有兩種方式 Sequential(堆疊)  Model(複雜)\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "# Dense: 全連接層(fully-connected)\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "\n",
+        "layers = [\n",
+        "    Dense(64, activation=\"sigmoid\", input_dim=784),\n",
+        "    Dense(10, activation=\"sigmoid\")\n",
+        "]\n",
+        "model = Sequential(layers)\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mjpim9WcmWTS",
+        "outputId": "b1719cd1-0ef0-4e9f-d202-cd7e29dfdef2"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " dense_4 (Dense)             (None, 64)                50240     \n",
+            "                                                                 \n",
+            " dense_5 (Dense)             (None, 10)                650       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 50890 (198.79 KB)\n",
+            "Trainable params: 50890 (198.79 KB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
         }
       ]
     }
