--- a/5_mnist.ipynb
+++ b/5_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXqHQuWsAGqVwr4AH2G+NB",
+      "authorship_tag": "ABX9TyOuLmUVYxTU3Y5iYsY+KDUG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1479,7 +1479,8 @@
         "\n",
         "layers = [\n",
         "    Dense(64, activation=\"sigmoid\", input_dim=784),\n",
-        "    Dense(10, activation=\"sigmoid\")\n",
+        "    # 標準化(加起來=1)的sigmoid -> softmax\n",
+        "    Dense(10, activation=\"softmax\")\n",
         "]\n",
         "model = Sequential(layers)\n",
         "model.summary()"
