--- a/5_mnist.ipynb
+++ b/5_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOAcsSySGHNQGJbOVyCzuA",
+      "authorship_tag": "ABX9TyMv/pqOAwBUFZAneQEdN36T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 68
         },
         "id": "gijMgaL4ht8b",
         "outputId": "833a132b-9c8c-4d2b-e8e6-359318d82ca0"
@@ -296,7 +296,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 956
+          "height": 976
         },
         "collapsed": true,
         "id": "5cQ9bKA_iAc-",
@@ -1425,6 +1425,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 其實係數不是完全隨機, 他是在某個範圍作隨機\n",
+        "# 其實變相要求你的輸入應該要落在某個範圍, tensorflow希望你的輸入落在0~1或者-1~1\n",
+        "x_train_scaled = x_train.reshape(60000, 784) / 255.0\n",
+        "x_test_scaled = x_test.reshape(10000, 784) / 255.0"
+      ],
+      "metadata": {
+        "id": "WSlJXgIqg4-R"
+      },
+      "execution_count": 14,
+      "outputs": []
     }
   ]
 }
