--- a/5_mnist.ipynb
+++ b/5_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv/pqOAwBUFZAneQEdN36T",
+      "authorship_tag": "ABX9TyOrrHRO0TF5BXJD0TzkO9Qw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1439,6 +1439,111 @@
       },
       "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# batch_size: 看了多少筆才更新一次模型參數\n",
+        "# epochs: 整份資料要看幾round\n",
+        "# !!! 究竟是幾round??? 我們不會無限訓練下去(當然loss會越來越小)->過擬和\n",
+        "# 跟機器學習依樣, 你要準備一份他沒看過的, 來檢視現在的擬和程度\n",
+        "# batch=100 vali=0.1  1個epoch做了幾次模型更新: 54000 / 100 = 540\n",
+        "# 擬要看validation loss來決定訓練多少個epochs\n",
+        "# verbose: 印log程度 0(quiet) 1(bar) 2(沒有bar)\n",
+        "model.fit(x_train_scaled,\n",
+        "     y_train_onehot,\n",
+        "     batch_size=100,\n",
+        "     epochs=30,\n",
+        "     validation_split=0.1,\n",
+        "     verbose=2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "RRXYzLBYndnX",
+        "outputId": "11b5dede-7c14-41e8-b9e3-fb9c4d7af386"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/30\n",
+            "540/540 - 2s - loss: 0.0048 - accuracy: 0.9731 - val_loss: 0.0046 - val_accuracy: 0.9707 - 2s/epoch - 3ms/step\n",
+            "Epoch 2/30\n",
+            "540/540 - 2s - loss: 0.0047 - accuracy: 0.9738 - val_loss: 0.0045 - val_accuracy: 0.9715 - 2s/epoch - 4ms/step\n",
+            "Epoch 3/30\n",
+            "540/540 - 1s - loss: 0.0046 - accuracy: 0.9743 - val_loss: 0.0045 - val_accuracy: 0.9727 - 1s/epoch - 3ms/step\n",
+            "Epoch 4/30\n",
+            "540/540 - 1s - loss: 0.0045 - accuracy: 0.9750 - val_loss: 0.0044 - val_accuracy: 0.9713 - 1s/epoch - 3ms/step\n",
+            "Epoch 5/30\n",
+            "540/540 - 1s - loss: 0.0044 - accuracy: 0.9759 - val_loss: 0.0044 - val_accuracy: 0.9703 - 1s/epoch - 3ms/step\n",
+            "Epoch 6/30\n",
+            "540/540 - 1s - loss: 0.0043 - accuracy: 0.9760 - val_loss: 0.0044 - val_accuracy: 0.9712 - 1s/epoch - 2ms/step\n",
+            "Epoch 7/30\n",
+            "540/540 - 1s - loss: 0.0042 - accuracy: 0.9767 - val_loss: 0.0043 - val_accuracy: 0.9712 - 1s/epoch - 3ms/step\n",
+            "Epoch 8/30\n",
+            "540/540 - 1s - loss: 0.0041 - accuracy: 0.9774 - val_loss: 0.0043 - val_accuracy: 0.9718 - 1s/epoch - 3ms/step\n",
+            "Epoch 9/30\n",
+            "540/540 - 1s - loss: 0.0041 - accuracy: 0.9774 - val_loss: 0.0043 - val_accuracy: 0.9732 - 1s/epoch - 3ms/step\n",
+            "Epoch 10/30\n",
+            "540/540 - 2s - loss: 0.0040 - accuracy: 0.9777 - val_loss: 0.0042 - val_accuracy: 0.9715 - 2s/epoch - 3ms/step\n",
+            "Epoch 11/30\n",
+            "540/540 - 2s - loss: 0.0039 - accuracy: 0.9786 - val_loss: 0.0042 - val_accuracy: 0.9723 - 2s/epoch - 4ms/step\n",
+            "Epoch 12/30\n",
+            "540/540 - 1s - loss: 0.0039 - accuracy: 0.9786 - val_loss: 0.0042 - val_accuracy: 0.9732 - 1s/epoch - 2ms/step\n",
+            "Epoch 13/30\n",
+            "540/540 - 1s - loss: 0.0038 - accuracy: 0.9789 - val_loss: 0.0042 - val_accuracy: 0.9722 - 1s/epoch - 2ms/step\n",
+            "Epoch 14/30\n",
+            "540/540 - 1s - loss: 0.0037 - accuracy: 0.9794 - val_loss: 0.0041 - val_accuracy: 0.9732 - 1s/epoch - 2ms/step\n",
+            "Epoch 15/30\n",
+            "540/540 - 1s - loss: 0.0037 - accuracy: 0.9798 - val_loss: 0.0041 - val_accuracy: 0.9735 - 1s/epoch - 3ms/step\n",
+            "Epoch 16/30\n",
+            "540/540 - 1s - loss: 0.0036 - accuracy: 0.9803 - val_loss: 0.0041 - val_accuracy: 0.9732 - 1s/epoch - 3ms/step\n",
+            "Epoch 17/30\n",
+            "540/540 - 1s - loss: 0.0036 - accuracy: 0.9807 - val_loss: 0.0041 - val_accuracy: 0.9728 - 1s/epoch - 2ms/step\n",
+            "Epoch 18/30\n",
+            "540/540 - 1s - loss: 0.0035 - accuracy: 0.9809 - val_loss: 0.0040 - val_accuracy: 0.9735 - 1s/epoch - 2ms/step\n",
+            "Epoch 19/30\n",
+            "540/540 - 2s - loss: 0.0035 - accuracy: 0.9811 - val_loss: 0.0040 - val_accuracy: 0.9732 - 2s/epoch - 3ms/step\n",
+            "Epoch 20/30\n",
+            "540/540 - 2s - loss: 0.0034 - accuracy: 0.9815 - val_loss: 0.0040 - val_accuracy: 0.9735 - 2s/epoch - 4ms/step\n",
+            "Epoch 21/30\n",
+            "540/540 - 1s - loss: 0.0033 - accuracy: 0.9819 - val_loss: 0.0040 - val_accuracy: 0.9738 - 1s/epoch - 3ms/step\n",
+            "Epoch 22/30\n",
+            "540/540 - 1s - loss: 0.0033 - accuracy: 0.9821 - val_loss: 0.0039 - val_accuracy: 0.9745 - 1s/epoch - 2ms/step\n",
+            "Epoch 23/30\n",
+            "540/540 - 1s - loss: 0.0032 - accuracy: 0.9826 - val_loss: 0.0039 - val_accuracy: 0.9748 - 1s/epoch - 2ms/step\n",
+            "Epoch 24/30\n",
+            "540/540 - 1s - loss: 0.0032 - accuracy: 0.9827 - val_loss: 0.0039 - val_accuracy: 0.9747 - 1s/epoch - 3ms/step\n",
+            "Epoch 25/30\n",
+            "540/540 - 1s - loss: 0.0032 - accuracy: 0.9833 - val_loss: 0.0039 - val_accuracy: 0.9755 - 1s/epoch - 2ms/step\n",
+            "Epoch 26/30\n",
+            "540/540 - 1s - loss: 0.0031 - accuracy: 0.9836 - val_loss: 0.0039 - val_accuracy: 0.9750 - 1s/epoch - 2ms/step\n",
+            "Epoch 27/30\n",
+            "540/540 - 1s - loss: 0.0031 - accuracy: 0.9837 - val_loss: 0.0039 - val_accuracy: 0.9748 - 1s/epoch - 3ms/step\n",
+            "Epoch 28/30\n",
+            "540/540 - 2s - loss: 0.0030 - accuracy: 0.9840 - val_loss: 0.0038 - val_accuracy: 0.9757 - 2s/epoch - 3ms/step\n",
+            "Epoch 29/30\n",
+            "540/540 - 2s - loss: 0.0030 - accuracy: 0.9843 - val_loss: 0.0039 - val_accuracy: 0.9753 - 2s/epoch - 4ms/step\n",
+            "Epoch 30/30\n",
+            "540/540 - 1s - loss: 0.0029 - accuracy: 0.9848 - val_loss: 0.0038 - val_accuracy: 0.9762 - 1s/epoch - 3ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7f637a8df070>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     }
   ]
 }
