--- a/5_mnist.ipynb
+++ b/5_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrrHRO0TF5BXJD0TzkO9Qw",
+      "authorship_tag": "ABX9TyNP05mLu57/kU/nBnspap2P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1542,6 +1542,106 @@
           },
           "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Demo argmax(之前的idxmax)\n",
+        "# axis=0: 直行的最大值 axis=1: 橫列最大值的位置\n",
+        "import numpy as np\n",
+        "np.array([\n",
+        "    [1, 2],\n",
+        "    [3, 4],\n",
+        "    [5, 6]\n",
+        "]).argmax(axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qTeykU-YwPma",
+        "outputId": "002ccfe2-8c3d-4c38-f1dd-bab6b20ae36e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(x_test_scaled, y_test_onehot)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7XI_TXgKxqki",
+        "outputId": "04076164-ef0d-4f30-c8ce-239cad11051e"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 1s 3ms/step - loss: 0.0044 - accuracy: 0.9723\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.004444182384759188, 0.9722999930381775]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pre = model.predict(x_test_scaled).argmax(axis=1)\n",
+        "pre"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bMYKtXwFv5xx",
+        "outputId": "136854d0-0b6d-4499-b0f9-ca72a3262a70"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 0s 1ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([7, 2, 1, ..., 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     }
